--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,12 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_read">Read Quran</string>
+    <string name="menu_home">MyQoran</string>
+    <string name="menu_read">Home</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
-    <string name="txt_main_feature">Main Menu</string>
     <string name="txt_salam">Assalamu\'alaikum</string>
     <string name="txt_recent_read">Recent Read</string>
     <string name="txt_slide_down_pls">Geser kebawah untuk memulai baca Quran</string>
+    <string name="nav_read_fragment">Read Fragment</string>
 </resources>
