--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,18 @@
 <resources>
-    <string name="app_name">MyQoran</string>
+    <string name="app_name" translatable="false">MyQoran</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">MyQoran</string>
-    <string name="menu_read">Home</string>
+    <string name="menu_home" translatable="false">MyQoran</string>
+    <string name="menu_read" translatable="false">Home</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
-    <string name="txt_salam">Assalamu\'alaikum</string>
+    <string name="txt_salam" translatable="false">Assalamu\'alaikum</string>
     <string name="txt_recent_read">Recent Read</string>
     <string name="txt_slide_down_pls">Slide down to start reading Quran</string>
-    <string name="nav_read_fragment">Read Fragment</string>
+    <string name="nav_read_fragment">Read Page</string>
     <string name="txt_english">English</string>
     <string name="txt_status_activated">Status: Activated</string>
     <string name="txt_status_deactivated">Status: Deactivated</string>
@@ -34,4 +32,7 @@
     <string name="txt_desc_deactivate_tajweed">Deactivate if tajwid bother your reading experience</string>
     <string name="txt_desc_darkmode_settings">Change background to dark</string>
     <string name="txt_play_all_ayah">Play All Ayah</string>
+    <string name="txt_sholat_schedule">Sholat Schedule</string>
+    <string name="txt_bookmark_empty">You haven\'t added some bookmarks</string>
+    <string name="txt_bookmark_removed">Bookmark Removed</string>
 </resources>
