--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="txt_bookmark_ayah">Bookmark</string>
     <string name="txt_search_ayah">Search Ayah…</string>
     <string name="txt_search_surah">Search Surah…</string>
+    <string name="menu_kiblat">Cari Kiblat</string>
 </resources>
